Bug 446029 - Cannot drop web images onto the welcome screen
Summary: Cannot drop web images onto the welcome screen
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.4.8
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL:
Keywords:
Depends on:
Blocks: 447428
  Show dependency treegraph
 
Reported: 2021-11-24 12:36 UTC by Nagy Tibor
Modified: 2022-01-03 23:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screen capture (680.34 KB, video/mp4)
2021-11-24 12:36 UTC, Nagy Tibor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nagy Tibor 2021-11-24 12:36:53 UTC
Created attachment 143899 [details]
Screen capture

SUMMARY
Krita currently throws a "The file <URL> does not exist." error when dropping images from web browsers onto the welcome screen. This is kinda inconsistent with how drag and drop works on the document canvas, where opening web images by drag and drop are supported and works flawlessly. I would expect the welcome screen also support this.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.23
KDE Plasma Version: 5.23.3
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.3
Graphics Platform: X11
Browser Version: Vivaldi 4.3.2439.71
Comment 1 amyspark 2021-11-24 16:16:20 UTC
This is an inconsistency in how we handle drag&drop events, depending on whether they come from the welcome widget or the KisView.

The welcome widget expects a drop event with an image and an URL, but through the document importer accepts only local files (which in this case doesn't exist; I also tested this with Vivaldi 4.0.2312.33). Conversely, the KisView accepts all drops that have an URL in them (by retrieving the remote URL to a temporary file), but ignoring the attached image.
Comment 2 Bug Janitor Service 2021-11-25 14:12:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1177