Support drag-and-drop of remote-only images

This fixes support of Chrome < 95 drop events (or, frankly, anyone who
only supplies URLs in them).

BUG: 446029